--- a/Machine Learning Data Lifecycle in Production/assignments and labs/assigment1 (Data Validation)/Data Validation.ipynb
+++ b/Machine Learning Data Lifecycle in Production/assignments and labs/assigment1 (Data Validation)/Data Validation.ipynb
@@ -429,6 +429,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "tJgKyBXPddRf"
+      },
+      "source": [
+        "**Note:** Depending on your use case, you might need to shuffle the dataset first before calling the function above. For example, some datasets are arranged by geographical location so directly splitting them might result in training sets that only come from locations that are not found in the evaluation and serving sets. That will likely result in a model that will only do well on the locations found in the training set. One way to avoid that kind of problem is to shuffle the dataset."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -454,28 +463,12 @@
       "source": [
         "# grader-required-cell\n",
         "\n",
-        "# Split the datasets\n",
-        "train_df, eval_df, serving_df = prepare_data_splits_from_dataframe(df)\n",
-        "print('Training dataset has {} records\\nValidation dataset has {} records\\nServing dataset has {} records'.format(len(train_df),len(eval_df),len(serving_df)))"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "tJgKyBXPddRf"
-      },
-      "source": [
-        "**Note:** Depending on your use case, you might need to shuffle the dataset first before calling the function above. For example, some datasets are arranged by geographical location so directly splitting them might result in training sets that only come from locations that are not found in the evaluation and serving sets. That will likely result in a model that will only do well on the locations found in the training set. One way to avoid that kind of problem is to shuffle the dataset. For instance, you can do something like this:\n",
-        "\n",
-        "```\n",
         "# Shuffle the dataset\n",
-        "shuffled_df = df.sample(frac=1, random_state=48)\n",
+        "shuffled_df = df.sample(frac=1, random_state=0)\n",
         "\n",
         "# Split the dataset\n",
         "train_df, eval_df, serving_df = prepare_data_splits_from_dataframe(shuffled_df)\n",
-        "```\n",
-        "\n",
-        "For grading purposes however, you will not shuffle the dataset in this lab. After you pass the assignment later and you want more practice, you can try to shuffle the data like above and observe the difference in the outputs. You might notice more anomalies so you will need to adjust the code on how to handle them."
+        "print('Training dataset has {} records\\nValidation dataset has {} records\\nServing dataset has {} records'.format(len(train_df),len(eval_df),len(serving_df)))"
       ]
     },
     {
